tests/test_struct/bad/nested2.catala_en
## Article

```catala
declaration structure S:
  data x content E
  data y content integer

declaration enumeration E:
  -- Case1 content boolean
  -- Case2 content S

declaration scope A:
  context x content E
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
